Mon Apr  6 19:02:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, b-merge-group_by.rb, bhere.rb,
	  n-barrier.rb, n-direct-product.rb, n-file-output.rb, n-filter.rb,
	  n-join.rb, n-local-file-output.rb, n-zipper.rb, port.rb: 
	  [要求: #75] INPORT POPのログにクラス名が出るようにした.


Mon Apr  6 15:55:49 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* hash-mf5.rb: ハッシュ関数が間違っていた.

Wed Apr  1 16:22:32 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* conf.rb: CONF#HOME 絶対パスを返すようにした.
		   def_path -> def_rpathに変更
	* NJob#abort_running: @main_threadが割り当てられてないときはexitし
	  ないようにした
	* fairy-BODY.templ: -e オプション追加
	* base-app.rb: --conf の設定を環境変数に反映するようにした.
	
	
Tue Mar 31 18:24:58 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/share/base-app.rn: --CONF.XXX オプションがちゃんとして
	  なかった

Tue Mar 31 17:36:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy, lib/fairy/template/fairy-HEAD,
	  lib/fairy/template/fairy-BODY, lib/fairy/share/base-app.rb,
	  lib/share/conf.rb Makefile: [要求: #54] fairy shell対応
	
	* bin/fairy-cp, bin/fairy-rm, bin/master, bin/node: base-app.rb追
	  加に伴うリファクタリング

Tue Mar 24 16:52:32 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* conf.rb, fairy.conf: [要求: #2]対応

Thu Mar 19 18:11:51 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* {job,backend,node}/addins.rb: ディレクトリ構成が変わったのに対応

Thu Mar 19 17:32:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* Makefile: version.rbの位置が変わったのに対応
	* bin/*: $0 を設定
	* bin/{master,node}: オプション -h, -m, -p を追加
	* master.rb, node.rb, controller.rb, processor.rb, fairy.rb:
	  fairyとRubyのバージョンを表示するようにした.

Thu Mar 19 16:59:07 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* tools/git-tag: ディレクトリ構成変更に伴い変更

Thu Mar 19 16:52:56 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: 第一段完了
	* fairy.rb, conf.rb, fairy.conf: CONF.DEBUG_MONITOR_ON追加

Wed Mar 18 18:51:25 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: その2
