@@ -58,6 +58,7 @@ module Fairy
 
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
+#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
 ##CONF.DEBUG_MONITOR_ON = false
 
