@@ -58,7 +58,6 @@ module Fairy
       else
 	@queue = @queuing_policy
       end
-
       @log_import_ntimes_pop = CONF.LOG_IMPORT_NTIMES_POP
       @log_callback_proc = nil
 
@@ -107,6 +106,19 @@ module Fairy
     end
     DeepConnect.def_method_spec(self, "REF push(DVAL)")
 
+    def push_buf(buf)
+#p "BBBBBBBBBBBBBBBBB"
+#      buf.each{|e| @queue.push e}
+begin 
+  buf.each{|e| @queue.push e}
+#  @queue.push buf
+rescue
+  Log::debug_exception
+  raise
+end
+    end
+    DeepConnect.def_method_spec(self, "REF push_buf(DVAL)")
+
     def push_keep_identity(e)
       @queue.push e
     end
@@ -121,7 +133,8 @@ module Fairy
 	else
 	  @no_pop_elements += 1
 	  if @log_import_ntimes_pop && 
-	      @no_pop_elements % @log_import_ntimes_pop == 1
+	      (@no_pop_elements % @log_import_ntimes_pop == 0 || 
+	       @no_pop_elements == 1)
 	    if @log_callback_proc
 	      @log_callback_proc.call @no_pop_elements
 	    else
@@ -130,6 +143,11 @@ module Fairy
 	  end
 	  return e
 	end
+      end
+      if @log_callback_proc
+	@log_callback_proc.call "EOS"
+      else
+	Log::info(self, "IMPORT POP: EOS")
       end
       return nil
     end
@@ -143,8 +161,9 @@ module Fairy
 	  @no_eos += 1
 	else
 	  @no_pop_elements += 1
-	  if @log_import_ntimes_pop &&
-	      @no_pop_elements % @log_import_ntimes_pop == 1
+	  if @log_import_ntimes_pop && 
+	      (@no_pop_elements % @log_import_ntimes_pop == 0 || 
+	       @no_pop_elements == 1)
 	    if @log_callback_proc
 	      @log_callback_proc.call @no_pop_elements
 	    else
@@ -153,6 +172,11 @@ module Fairy
 	  end
 	  block.call(e)
 	end
+      end
+      if @log_callback_proc
+	@log_callback_proc.call "EOS"
+      else
+	Log::info(self, "IMPORT POP: EOS")
       end
     end
 
@@ -175,6 +199,10 @@ module Fairy
       @queuing_policy = policy
       @queuing_policy ||= CONF.POSTQUEUING_POLICY
 
+#      @output_buf = []
+#      @output_buf_mutex = Mutex.new
+#      @output_buf_cv = ConditionVariable.new
+      
       @output = nil
       @output_mutex = Mutex.new
       @output_cv = ConditionVariable.new
@@ -265,6 +293,16 @@ module Fairy
       @queue.push e
     end
 
+#     def push(e)
+# #      @output_buf_mutex.synchronize do
+# 	@output_buf.push e
+# 	if @output_buf.size > 1000 || e == END_OF_STREAM
+# 	  @output_buf_cv.signal
+# 	end
+# #      end
+# #      @queue.push e
+#     end
+
     def start_export
       Thread.start do
 	self.status = :EXPORT
@@ -276,15 +314,70 @@ module Fairy
 	      @output.push e
 	    end
 	  rescue DeepConnect::SessionServiceStopped
-	    Debug::debug_exception(self)
+	    Log::debug_exception(self)
 	    raise
 	  end
 	end
 	@output.push END_OF_STREAM
 	self.status = END_OF_STREAM
+# BUG#49用
+Log::debug(self, "export FINISH")
       end
       nil
     end
+
+#     Def Start_Export
+#       Thread.Start Do
+# 	Self.Status = :Export
+# 	Loop Do
+# #P "Aaaaaaaaaaa:1"
+# 	  Buf = Nil
+# 	  @Output_Buf_Mutex.Synchronize Do
+# #P "Aaaaaaaaaaa:2"
+# 	    @Output_Buf_Cv.Wait(@Output_Buf_Mutex)
+# #P "Aaaaaaaaaaa:3"
+# 	    Buf = @Output_Buf
+# #P "Aaaaaaaaaaa:4"
+# 	    @Output_Buf = []
+# #P "Aaaaaaaaaaa:5"
+# 	  End
+# #P "Aaaaaaaaaaa:6"
+# #Begin
+# 	  @Output.Push_Buf Buf
+# #Rescue
+# #  P $@, $!
+# #End
+# #P "Aaaaaaaaaaa:7"
+# 	  Break If Buf.Last == End_Of_Stream
+# #P "Aaaaaaaaaaa:8"
+# 	End
+# #P "Aaaaaaaaaaa:9"
+
+# # 	While (E = @Output_Buf.Pop) != End_Of_Stream
+# # 	  Begin 
+# # 	    If Port_Keep_Identity_Class_Set[E.Class]
+# # 	      @Output.Push_Keep_Identity(E)
+# # 	    Else
+# # 	      Buf.Push E
+# # 	      If Buf.Size > 1000
+# # 		@Output.Push_Buf Buf.Join("")
+# # 		Buf = []
+# # 	      End
+# # #	      @Output.Push E
+# # 	    End
+# # 	  Rescue Deepconnect::Sessionservicestopped
+# # 	    Debug::Debug_Exception(Self)
+# # 	    Raise
+# # 	  End
+# # 	End
+# # 	If Buf.Size > 0
+# # 	  @Output.Push_Buf Buf.Join("")
+# # 	End
+# 	@Output.Push End_Of_Stream
+# 	Self.Status = End_Of_Stream
+#       End
+#       Nil
+#     End
 
     def status=(val)
       @status_mutex.synchronize do
@@ -298,7 +391,7 @@ module Fairy
 	while @status != END_OF_STREAM
 	  @status_cv.wait(@status_mutex)
 	end
-	@status = :EXPORT_FINISH
+#	@status = :EXPORT_FINISH
       end
     end
   end
@@ -306,6 +399,47 @@ module Fairy
   module OnMemoryQueue
     def self.new(policy)
       Queue.new
+    end
+  end
+
+  module LazyQueue
+    def initialize(policy)
+      @policy = policy
+
+      @queue_threshold = 100
+
+      @queue = []
+      @queue_mutex = Mutex.new
+      @queue_cv = ConditionVariable.new
+    end
+
+    def push(e)
+      @queue_mutex.synchronize do
+	@queue.push e
+	if @queue.size >= @queue_threshold
+	  @queue_cv.signal
+	end
+      end
+    end
+
+    def pop
+      @queue_mutex.synchronize do
+	while @queue.empty?
+	  @queue_cv.wait(@queue_mutex)
+	end
+	@queue.shift
+      end
+    end
+
+    def pop_all
+      @queue_mutex.synchronize do
+	while @queue.size < @queue_threshold
+	  @queue_cv.wait(@queue_mutex)
+	end
+	buf = @queue
+	@queue = []
+	buf
+      end
     end
   end
 
